<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="45dip"
    android:background="#f7f6f6" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentBottom="true"
        android:background="#cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="26dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:paddingEnd="5dip"
        android:paddingLeft="15dip"
        android:paddingRight="5dip"
        android:paddingStart="15dip" >

        <Button
            android:id="@+id/switch_btn_baby"
            android:layout_width="0dip"
            android:layout_height="26dip"
            android:layout_marginEnd="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="3"
            android:textSize="12sp"
            android:background="@drawable/selector_btn_switch"
            android:text="@string/activities_baby"
            android:textColor="@drawable/selector_switch_text" />

        <Button
            android:id="@+id/switch_btn_education"
            android:textSize="12sp"
            android:layout_width="0dip"
            android:layout_height="26dip"
            android:layout_marginEnd="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="4"
            android:background="@drawable/selector_btn_switch"
            android:text="@string/activities_education"
            android:textColor="@drawable/selector_switch_text" />

        <Button
            android:id="@+id/switch_btn_resale"
            android:layout_width="0dip"
            android:textSize="12sp"
            android:layout_height="26dip"
            android:layout_marginEnd="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="3"
            android:background="@drawable/selector_btn_switch"
            android:text="@string/activities_resale"
            android:textColor="@drawable/selector_switch_text" />

        <Button
            android:id="@+id/switch_btn_exercuse"
            android:layout_width="0dip"
            android:textSize="12sp"
            android:layout_height="26dip"
            android:layout_marginEnd="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="4"
            android:background="@drawable/selector_btn_switch"
            android:text="@string/activities_exercuse"
            android:textColor="@drawable/selector_switch_text" />
    </LinearLayout>

</RelativeLayout>