<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/regist_bg" >

    <Button
        android:id="@+id/btn_forgot_forgot"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/selector_btn_login"
        android:onClick="onClick"
        android:gravity="center"
        android:text="@string/forgot_forgot"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_forgot_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_forgot_forgot"
        android:layout_marginBottom="30dip"
        android:layout_marginRight="15dip"
        android:gravity="right"
        android:text="@string/forgot_hint"
        android:textColor="@color/translucent"
        android:textSize="12sp" />


    <RelativeLayout
        android:id="@+id/rl_forgot_email"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_above="@id/tv_forgot_hint"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/translucent" />

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/login_email" />

        <EditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/iv_email"
            android:layout_toRightOf="@id/iv_email"
            android:background="@null"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/translucent"
            android:textColorHint="@color/translucent" >

            <requestFocus />
        </EditText>
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:paddingBottom="15dip"
        android:paddingTop="15dip"
        android:text="@string/forgot_forgot_password"
        android:layout_above="@id/rl_forgot_email"
        android:textColor="@color/white"
        android:textSize="30sp" /> 

</RelativeLayout>